z-index: fix

--- a/css/form.css
+++ b/css/form.css
@@ -5,7 +5,6 @@
     background-attachment: fixed;
     background-size: cover;
     position: relative;
-    z-index: -1;
 }
 
 .contact_bg::after{
@@ -29,6 +28,7 @@
     margin: 0 150px;
     flex-direction: row;
     background-color: #004d5f;
+    z-index: 999999 !important;
 }
 .contact_options{
     width: 40%;
